--- a/slider.html
+++ b/slider.html
@@ -79,12 +79,12 @@ $(document).ready(function() {
 		    if (index == 0) {
     			$("div[class=captions").append('<div class="focalPoint"><p>' + item + '</p></div>');
     			$("ul[class=selectors").append('<li class="focalPoint"><a href="">&#x2219</a></li>');
-    			$("ul[class='wrp animate'").append('<li class="elmnt-one"><div class="skew"><div class="wrap"><img src="cpImages/IMG_8486.JPG"></div></div></li>');
+    			$("ul[class='wrp animate'").append('<li class="elmnt-one"><div class="skew"><div class="wrap"><img src="cpImages/DH_2F_EastStair.JPG"></div></div></li>');
     		} else {
     			var number = getNumberString(index);
     			$("div[class=captions").append('<div class><p>' + item + '</p></div>');
     			$("ul[class=selectors").append('<li><a href="">&#x2219</a></li>');
-    			$("ul[class='wrp animate'").append('<li class="elmnt-' + number + '"><div class="skew"><div class="wrap"><img src="cpImages/IMG_8488.JPG"></div></div></li>');
+    			$("ul[class='wrp animate'").append('<li class="elmnt-' + number + '"><div class="skew"><div class="wrap"><img src="cpImages/DH_1F_EastStair.JPG"></div></div></li>');
     			
     		}
 		});
