--- a/slider.html
+++ b/slider.html
@@ -47,7 +47,6 @@ var getNumberString = function getNumberString(number) {
 	}
 }
 $(document).ready(function() {
-	console.log("345");
 	var start = getUrlParameter('Start');
 	var end = getUrlParameter('End');
 	var form = $('<form action="#" method="post">' +
@@ -75,20 +74,18 @@ $(document).ready(function() {
   //   		}
 		// }
 		jQuery.each(json.description, function(index, item) {
-			console.log(index);
 		    if (index == 0) {
     			$("div[class=captions").append('<div class="focalPoint"><p>' + item + '</p></div>');
     			$("ul[class=selectors").append('<li class="focalPoint"><a href="">&#x2219</a></li>');
-    			$("ul[class='wrp animate'").append('<li class="elmnt-one"><div class="skew"><div class="wrap"><img src="cpImages/DH_2F_EastStair.JPG"></div></div></li>');
+    			$("ul[class='wrp animate'").append('<li class="elmnt-one"><div class="skew"><div class="wrap"><img src="cpImages/' + json.cpList[index] + '.JPG"></div></div></li>');
     		} else {
     			var number = getNumberString(index);
     			$("div[class=captions").append('<div class><p>' + item + '</p></div>');
     			$("ul[class=selectors").append('<li><a href="">&#x2219</a></li>');
-    			$("ul[class='wrp animate'").append('<li class="elmnt-' + number + '"><div class="skew"><div class="wrap"><img src="cpImages/DH_1F_EastStair.JPG"></div></div></li>');
+    			$("ul[class='wrp animate'").append('<li class="elmnt-' + number + '"><div class="skew"><div class="wrap"><img src="cpImages/' + json.cpList[index] + '.JPG"></div></div></li>');
     			
     		}
 		});
-		console.log("finish");
 		$( '.sldr' ).each( function() {
 			var th = $( this );
 			th.sldr({
@@ -107,6 +104,7 @@ $(document).ready(function() {
 	});
    	// alert(start + end);
 });
+
 </script>
 </head>
 
@@ -140,7 +138,7 @@ $(document).ready(function() {
 
 	<button class="sldr-prv sldr-nav prev">Prev</button>
 	<button class="sldr-nxt sldr-nav next">Next</button>
-
+	<button class="back">Back</button>
 	<div class="clear"></div>
 
 	<br>
@@ -154,13 +152,9 @@ $(document).ready(function() {
 <script src="js/jquery-1.10.2.min.js"></script>
 <script src="js/jquery.sldr.js"></script>
 <script>
-
-$( window ).load( function() {
-	console.log("123");
-
-
+$("button[class=back]").click(function(){
+    window.location = './index.html?';
 });
-
 </script>
 
 </body>
