--- a/slider.html
+++ b/slider.html
@@ -75,14 +75,14 @@ $(document).ready(function() {
 		// }
 		jQuery.each(json.description, function(index, item) {
 		    if (index == 0) {
-    			$("div[class=captions").append('<div class="focalPoint"><p>' + item + '</p></div>');
-    			$("ul[class=selectors").append('<li class="focalPoint"><a href="">&#x2219</a></li>');
-    			$("ul[class='wrp animate'").append('<li class="elmnt-one"><div class="skew"><div class="wrap"><img src="cpImages/' + json.cpList[index] + '.JPG"></div></div></li>');
+    			$("div[class=captions]").append('<div class="focalPoint"><p>' + item + '</p></div>');
+    			$("ul[class=selectors]").append('<li class="focalPoint"><a href="">&#x2219</a></li>');
+    			$("ul[class='wrp animate']").append('<li class="elmnt-one"><div class="skew"><div class="wrap"><img src="cpImages/' + json.cpList[index] + '.JPG"></div></div></li>');
     		} else {
     			var number = getNumberString(index);
-    			$("div[class=captions").append('<div class><p>' + item + '</p></div>');
-    			$("ul[class=selectors").append('<li><a href="">&#x2219</a></li>');
-    			$("ul[class='wrp animate'").append('<li class="elmnt-' + number + '"><div class="skew"><div class="wrap"><img src="cpImages/' + json.cpList[index] + '.JPG"></div></div></li>');
+    			$("div[class=captions]").append('<div class><p>' + item + '</p></div>');
+    			$("ul[class=selectors]").append('<li><a href="">&#x2219</a></li>');
+    			$("ul[class='wrp animate']").append('<li class="elmnt-' + number + '"><div class="skew"><div class="wrap"><img src="cpImages/' + json.cpList[index] + '.JPG"></div></div></li>');
     			
     		}
 		});
