--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@ $( function() {
 									<p>End (Example: DH 2210)</p>
 									<input type="text" class="end" name="End" required=""/> 
 									<div>
+									<p>Preferences</p>
 									<label class="anim">
 										<input type="checkbox" class="checkbox">
-										<span>Staircase?</span> 
+										<span>Staircase (more exercise)?</span> 
 									</label>
 									<label class="anim">
 										<input type="checkbox" class="checkbox">
-										<span>Indoor?</span> 
+										<span>Indoor (too hot/cold)?</span> 
 									</label>
 									<label class="anim">
 										<input type="checkbox" class="checkbox">
@@ -97,7 +98,7 @@ $( function() {
 			</div>   
 		</div>
 	</div>	 
-	<h1>My heart is in the walk<br><span style="font-size:70%;">--Andrew Carnegie</span></h1> 
+	<h1>"My heart is in the walk."<br><span style="font-size:70%;">-Andrew Carnegie</span></h1> 
 
 	<!-- //main --> 
 </body>
