--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@ $( function() {
 									<p>End (Example: DH 2210)</p>
 									<input type="text" class="end" name="End" required=""/> 
 									<div>
-									<p>Preferences</p>
+									<p>Preferences (optional)</p>
 									<label class="anim">
 										<input type="checkbox" class="checkbox">
-										<span>Staircase (more exercise)?</span> 
+										<span>Elevator (less exercise)?</span> 
 									</label>
 									<label class="anim">
 										<input type="checkbox" class="checkbox">
-										<span>Indoor (too hot/cold)?</span> 
+										<span>Outdoor (fresh air)?</span> 
 									</label>
 									<label class="anim">
 										<input type="checkbox" class="checkbox">
